[gd_scene load_steps=3 format=3 uid="uid://b8dev3oqjl88"]

[ext_resource type="Script" path="res://dash.gd" id="1_6c5v4"]
[ext_resource type="AudioStream" uid="uid://dq3xm4nlbljxn" path="res://audio/558205__zaziesound__whoosh-sample.wav" id="2_xpy7c"]

[node name="Dash" type="Node2D"]
script = ExtResource("1_6c5v4")

[node name="DurationTimer" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true

[node name="WhooshSound" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("2_xpy7c")

[connection signal="timeout" from="DurationTimer" to="." method="_on_duration_timer_timeout"]
